src/log/build_2024-05-01_19-06-31/imu/stderr.log
  File "/home/mayooran/Documents/ros_topics/src/install/imu/lib/python3.8/site-packages/imu/imu_pub.py", line 32
    ts= String()
    ^
SyntaxError: invalid syntax

